--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon indesx.js",
+    "dev": "nodemon index.js",
     "build": "npm i"
   },
   "author": "Yash",
